# trezor-firmware

.github/workflows/: build.yml
common/protob/: messages-evolu.proto  messages-thp.proto  messages.proto
core/: Makefile  SConscript.bootloader  SConscript.firmware  SConscript.kernel  SConscript.secmon  SConscript.unix
core/embed/projects/bootloader/: fw_check.c  main.c
core/embed/projects/kernel/: main.c
core/embed/projects/prodtest/: main.c
core/embed/projects/unix/: main_main.c
core/embed/rust/: Cargo.toml  build.rs
core/embed/upymod/: qstrdefsport.h
core/site_scons/models/: stm32f4_common.py  stm32u5_common.py  unix_common.py
core/src/apps/: workflow_handlers.py
core/src/trezor/: messages.py
core/tests/: run_tests.sh  test_apps.evolu.check_evolu.py  test_storage.py
crypto/aes/: aesgcm.c
legacy/: memory_app_0.0.0.ld
legacy/bootloader/: bootloader.c
python/src/trezorlib/: client.py  debuglink.py  evolu.py  messages.py  protocol_v1.py
rust/trezor-thp/: Cargo.toml
rust/trezor-thp/examples/: ask-emulator.rs
rust/trezor-thp/src/: channel.rs  credential.rs  error.rs  fragment.rs  header.rs  lib.rs  noise.rs
storage/: storage.c  storage.h
tests/: conftest.py
tests/device_tests/: test_authenticate_device.py
tests/device_tests/evolu/: common.py  test_get_delegated_identity_key_thp.py  test_get_node.py  test_sign_registration.py
tests/device_tests/thp/: test_pairing.py
tests/persistence_tests/: test_shamir_persistence.py  test_wipe_code.py
tests/upgrade_tests/: test_firmware_upgrades.py  test_passphrase_consistency.py
(+64 files in other folders)
