[package]
name = "trezor-thp"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = { version = "0.9.2", default-features = false }
hex = "0.4.3" #XXX

[dependencies.noise-protocol]
version = "0.2.0"
default-features = false
path = "/home/mmilata/work/noise-rust/noise-protocol"

#[dev-dependencies]
#hex = "0.4.3"

[dev-dependencies.noise-rust-crypto]
version = "0.6.2"
default-features = false
features = ["use-x25519", "use-aes-256-gcm", "use-sha2"]
path = "/home/mmilata/work/noise-rust/noise-rust-crypto"
